--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.7.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -33,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "LaraStart\\": "app/"
         },
         "classmap": [
             "database/seeds",
